{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 9,
  "lineage": "15cc5c27-1368-6c8c-4376-a10591b6dcfe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129851160:internet-gateway/igw-00239d5bb38ceb3d4",
            "id": "igw-00239d5bb38ceb3d4",
            "owner_id": "376129851160",
            "tags": {
              "Environment": "production",
              "Name": "payment-gateway-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "payment-gateway-igw"
            },
            "vpc_id": "vpc-017808e1c8274b5fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129851160:route-table/rtb-0b585484b25084f2b",
            "id": "rtb-0b585484b25084f2b",
            "owner_id": "376129851160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00239d5bb38ceb3d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "payment-gateway-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "payment-gateway-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-017808e1c8274b5fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a161a07ef9963a35",
            "route_table_id": "rtb-0b585484b25084f2b",
            "subnet_id": "subnet-02e31fa484d96d4d9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129851160:security-group/sg-0719be29b1e4a8af1",
            "description": "Security group for k3s cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0719be29b1e4a8af1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NGINX Ingress HTTP",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NGINX Ingress HTTPS",
                "from_port": 30443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30443
              },
              {
                "cidr_blocks": [
                  "105.158.189.228/32"
                ],
                "description": "Grafana",
                "from_port": 30300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30300
              },
              {
                "cidr_blocks": [
                  "105.158.189.228/32"
                ],
                "description": "Prometheus",
                "from_port": 30090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30090
              },
              {
                "cidr_blocks": [
                  "105.158.189.228/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "105.158.189.228/32"
                ],
                "description": "Vault",
                "from_port": 30820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30820
              },
              {
                "cidr_blocks": [
                  "105.158.189.228/32"
                ],
                "description": "k3s API server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "payment-gateway-k3s-sg",
            "name_prefix": "",
            "owner_id": "376129851160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "payment-gateway-k3s-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "payment-gateway-k3s-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-017808e1c8274b5fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129851160:subnet/subnet-02e31fa484d96d4d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e31fa484d96d4d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129851160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "payment-gateway-public-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "payment-gateway-public-subnet"
            },
            "vpc_id": "vpc-017808e1c8274b5fb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129851160:vpc/vpc-017808e1c8274b5fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffd34953462b23de",
            "default_route_table_id": "rtb-0d9fd9bdc32fb6507",
            "default_security_group_id": "sg-0f2b761def9ed820a",
            "dhcp_options_id": "dopt-09c33db2691830a9e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017808e1c8274b5fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d9fd9bdc32fb6507",
            "owner_id": "376129851160",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "payment-gateway-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "payment-gateway-vpc"
            }
          }
        }
      ]
    }
  ]
}